Update logo and site content

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 </head>
 <body>
   <header>
-    <div><strong><img src="logo.png" alt="OMMACHEM" style="height:30px; vertical-align: middle;"> OMMACHEM <small style="font-size: 0.8em;">The Chemical Solution Company</small></strong></div>
+    <div><strong><img src="images/logo.png" alt="OMMACHEM" style="height:30px; vertical-align: middle" />
+ OMMACHEM <small style="font-size: 0.8em;">The Chemical Solution Company</small></strong></div>
     <nav>
       <a href="#about" class="tr" data-en="About" data-zh="关于我们">About</a>
       <a href="#products" class="tr" data-en="Products" data-zh="产品中心">Products</a>
