--- a/index.html
+++ b/index.html
@@ -29,14 +29,11 @@
       align-items: center;
     }
 
-    .branding img {
-<<<<<<< HEAD
-      height: 80px;
-=======
-      height: 40px;
->>>>>>> f9933ffc476c51b21acdd1a80e6cf82593470043
-      margin-right: 0;
-    }
+    .branding_img {
+    height: 60px;
+    margin-right: 0;
+}
+
 
     nav a {
       margin-left: 25px;
