Add class to logo image

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 <body>
   <header>
     <div class="branding">
-      <img src="images/logo.png" alt="OMMACHEM Logo">
+      <img src="images/logo.png" alt="OMMACHEM Logo" class="branding_img">
     </div>
     <nav>
       <a href="#about">About</a>
