Fix logo height

--- a/index.html
+++ b/index.html
@@ -1,45 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>OMMACHEM – The Chemical Solution Company</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #f8f9fb;
-      color: #333;
-    }
+  <head>
+    <meta charset="UTF-8" />
+    <title>OMMACHEM</title>
 
-    header {
-      background-color: #ffffff;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 15px 40px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-      position: sticky;
-      top: 0;
-      z-index: 1000;
-    }
+    <style>
+      header {
+        justify-content: space-between;
+        align-items: center;
+        padding: 15px 40px;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        position: sticky;
+        top: 0;
+        z-index: 1000;
+      }
 
-    .branding {
-      display: flex;
-      align-items: center;
-    }
+      .branding {
+        display: flex;
+        align-items: center;
+      }
 
-    .branding_img {
-    height: 60px;
-    margin-right: 0;
-}
+      .branding_img {
+        height: 60px;
+        margin-right: 0;
+      }
 
-
-    nav a {
-      margin-left: 25px;
-      text-decoration: none;
-      color: #003366;
-      font-weight: bold;
+      nav a {
+        margin-left: 25px;
+        text-decoration: none;
+        color: #003366;
+        font-weight: bold;
+      }
+    </style>
+  </head>
     }
 
     .banner img {
