--- a/index.html
+++ b/index.html
@@ -1,38 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>OMMACHEM</title>
+<head>
+  <meta charset="UTF-8" />
+  <title>OMMACHEM</title>
+  <style>
+    header {
+      justify-content: space-between;
+      align-items: center;
+      padding: 15px 40px;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+    }
 
-    <style>
-      header {
-        justify-content: space-between;
-        align-items: center;
-        padding: 15px 40px;
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        position: sticky;
-        top: 0;
-        z-index: 1000;
-      }
+    .branding {
+      display: flex;
+      align-items: center;
+    }
 
-      .branding {
-        display: flex;
-        align-items: center;
-      }
+    .branding_img {
+      height: 60px;
+      margin-right: 0;
+    }
 
-      .branding_img {
-        height: 60px;
-        margin-right: 0;
-      }
-
-      nav a {
-        margin-left: 25px;
-        text-decoration: none;
-        color: #003366;
-        font-weight: bold;
-      }
-    </style>
-  </head>
+    nav a {
+      margin-left: 25px;
+      text-decoration: none;
+      color: #003366;
+      font-weight: bold;
     }
 
     .banner img {
@@ -96,75 +92,6 @@
   </style>
 </head>
 <body>
-  <header>
-    <div class="branding">
-      <img src="images/logo.png" alt="OMMACHEM Logo" class="branding_img">
-    </div>
-    <nav>
-      <a href="#about">About</a>
-      <a href="#products">Products</a>
-      <a href="#contact">Contact</a>
-    </nav>
-    <div class="lang-switch">
-      <button onclick="setLang('en')">EN</button>
-      <button onclick="setLang('zh')">中</button>
-    </div>
-  </header>
-
-  <section class="banner">
-    <img src="images/banner.jpg" alt="OMMACHEM Banner">
-  </section>
-
-  <main>
-    <section id="about">
-      <h2 data-en="About Us" data-zh="关于我们">About Us</h2>
-      <p data-en="OMMACHEM is committed to providing sustainable, reliable, and effective solutions for textile pretreatment, dyeing, and finishing."
-         data-zh="OMMACHEM致力于为纺织前处理、染色和后整理提供可持续、可靠且高效的解决方案。">
-         OMMACHEM is committed to providing sustainable, reliable, and effective solutions for textile pretreatment, dyeing, and finishing.
-      </p>
-    </section>
-
-    <section id="products">
-      <h2 data-en="Our Products" data-zh="我们的产品">Our Products</h2>
-      <div class="products">
-        <div class="product-item">
-          <h3>Dispersing Agent YDL</h3>
-          <p>Excellent levelling and dispersing performance during dyeing process.</p>
-        </div>
-        <div class="product-item">
-          <h3>Anti-yellowing Agent APY-P</h3>
-          <p>Prevents yellowing in high-temperature finishing.</p>
-        </div>
-        <div class="product-item">
-          <h3>Soaping Agent AW-183</h3>
-          <p>Effective in removing unfixed dye to improve colorfastness.</p>
-        </div>
-      </div>
-    </section>
-
-    <section id="contact">
-      <h2 data-en="Contact Us" data-zh="联系我们">Contact Us</h2>
-      <form>
-        <label data-en="Name" data-zh="姓名">Name</label>
-        <input type="text" name="name">
-
-        <label data-en="Email" data-zh="邮箱">Email</label>
-        <input type="email" name="email">
-
-        <label data-en="Message" data-zh="留言">Message</label>
-        <textarea name="message"></textarea>
-
-        <button type="submit" style="background:#003366; color:white; padding:10px 20px; border:none; border-radius:4px; cursor:pointer;">Submit</button>
-      </form>
-    </section>
-  </main>
-
-  <script>
-    function setLang(lang) {
-      document.querySelectorAll('[data-en]').forEach(el => {
-        el.textContent = el.getAttribute(`data-${lang}`);
-      });
-    }
-  </script>
+  <!-- 网页主体 -->
 </body>
 </html>
