--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,70 +5,39 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>OMMACHEM</title>
   <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-    }
+    body { margin: 0; font-family: Arial, sans-serif; }
     header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 15px 40px;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-      position: sticky;
-      top: 0;
-      background-color: white;
-      z-index: 1000;
+      display: flex; justify-content: space-between; align-items: center;
+      padding: 15px 40px; box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      position: sticky; top: 0; background-color: white; z-index: 1000;
     }
-    .branding {
-      display: flex;
-      align-items: center;
-    }
-    .branding img {
-      height: 40px;
-      margin-right: 10px;
-    }
+    .branding { display: flex; align-items: center; }
+    .branding img { height: 60px; margin-right: 10px; }
     nav a {
-      margin-left: 25px;
-      text-decoration: none;
-      color: #003366;
+      margin-left: 25px; text-decoration: none; color: #003366;
       font-weight: bold;
     }
+    .lang-switch { display: flex; align-items: center; }
     .lang-switch button {
-      margin-left: 10px;
-      padding: 5px 10px;
-      background-color: #003366;
-      color: white;
-      border: none;
-      border-radius: 3px;
-      cursor: pointer;
+      margin-left: 10px; padding: 5px 10px;
+      background-color: #003366; color: white;
+      border: none; border-radius: 3px; cursor: pointer;
     }
-    .banner img {
-      width: 100%;
-      height: auto;
-    }
-    section {
-      padding: 40px;
-    }
-    h2 {
-      color: #003366;
-    }
-    .products {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-    }
+    .banner img { width: 100%; height: auto; }
+    section { padding: 40px; }
+    h2 { color: #003366; }
+    .products { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; }
     .product-item {
-      background: #fff;
-      border: 1px solid #ddd;
-      padding: 20px;
-      border-radius: 6px;
+      background: #fff; border: 1px solid #ddd;
+      padding: 20px; border-radius: 6px;
+    }
+    #searchBar {
+      margin-bottom: 20px; padding: 10px;
+      width: 100%; max-width: 500px; font-size: 16px;
     }
     footer {
-      background-color: #003366;
-      color: white;
-      text-align: center;
-      padding: 20px;
+      background-color: #003366; color: white;
+      text-align: center; padding: 20px;
     }
   </style>
 </head>
@@ -80,13 +48,13 @@
       <strong>OMMACHEM</strong>
     </div>
     <nav>
-      <a href="#about">About</a>
-      <a href="#products">Products</a>
-      <a href="#contact">Contact</a>
+      <a href="#about" data-en="About" data-zh="关于我们">About</a>
+      <a href="#products" data-en="Products" data-zh="产品">Products</a>
+      <a href="#contact" data-en="Contact" data-zh="联系我们">Contact</a>
     </nav>
     <div class="lang-switch">
-      <button>EN</button>
-      <button>中</button>
+      <button onclick="switchLang('en')">EN</button>
+      <button onclick="switchLang('zh')">中</button>
     </div>
   </header>
 
@@ -95,30 +63,34 @@
   </section>
 
   <section id="about">
-    <h2>About Us</h2>
-    <p>OMMACHEM is a professional supplier of comprehensive textile auxiliaries, offering solutions from pre-treatment, dyeing, soaping to finishing. We are committed to delivering high-performance products and reliable service to our global clients.</p>
+    <h2 data-en="About Us" data-zh="关于我们">About Us</h2>
+    <p data-en="OMMACHEM is a professional supplier of comprehensive textile auxiliaries..."
+       data-zh="OMMACHEM 是一家专业的纺织助剂供应商，提供从前处理、染色、皂洗到后整理的一站式解决方案。">
+      OMMACHEM is a professional supplier of comprehensive textile auxiliaries...
+    </p>
   </section>
 
   <section id="products">
-    <h2>Our Products</h2>
-    <div class="products">
-      <div class="product-item">
+    <h2 data-en="Our Products" data-zh="我们的产品">Our Products</h2>
+    <input type="text" id="searchBar" placeholder="Search products..." onkeyup="filterProducts()" />
+    <div class="products" id="productList">
+      <div class="product-item" data-title="Disperse Leveling Agent YDL" data-desc="Improves level dyeing effect...">
         <h3>Disperse Leveling Agent YDL</h3>
         <p>Improves level dyeing effect during high temperature dyeing process.</p>
       </div>
-      <div class="product-item">
+      <div class="product-item" data-title="Anti-yellowing Agent APY-P" data-desc="Prevents yellowing...">
         <h3>Anti-yellowing Agent APY-P</h3>
         <p>Prevents yellowing during high-temp setting, suitable for light-colored fabrics.</p>
       </div>
-      <div class="product-item">
+      <div class="product-item" data-title="Soaping Agent AW-183" data-desc="Removes unfixed dyes...">
         <h3>Soaping Agent AW-183</h3>
         <p>Removes unfixed dyes effectively, enhancing color fastness.</p>
       </div>
-      <div class="product-item">
+      <div class="product-item" data-title="High-temp Dispersant HDS-411" data-desc="Stable dispersing...">
         <h3>High-temp Dispersant HDS-411</h3>
         <p>Stable dispersing performance under high-temp dyeing conditions.</p>
       </div>
-      <div class="product-item">
+      <div class="product-item" data-title="JinterEco WHN-148" data-desc="Eco-friendly...">
         <h3>JinterEco WHN-148</h3>
         <p>Eco-friendly multifunctional washing agent for polyester and blends.</p>
       </div>
@@ -126,14 +98,31 @@
   </section>
 
   <section id="contact">
-    <h2>Contact Us</h2>
-    <p>WhatsApp/WeChat: +8617316273559</p>
-    <p>Email: info@ommachi.com</p>
-    <p>Instagram: @ommachem</p>
+    <h2 data-en="Contact Us" data-zh="联系我们">Contact Us</h2>
+    <p><strong>WhatsApp/WeChat:</strong> +8617316273559</p>
+    <p><strong>Email:</strong> info@ommachi.com</p>
+    <p><strong>Instagram:</strong> @ommachem</p>
   </section>
 
   <footer>
     &copy; 2025 OMMACHEM. All rights reserved.
   </footer>
+
+  <script>
+    function filterProducts() {
+      const query = document.getElementById('searchBar').value.toLowerCase();
+      document.querySelectorAll('.product-item').forEach(item => {
+        const title = item.dataset.title.toLowerCase();
+        const desc = item.dataset.desc.toLowerCase();
+        item.style.display = (title.includes(query) || desc.includes(query)) ? '' : 'none';
+      });
+    }
+
+    function switchLang(lang) {
+      document.querySelectorAll('[data-en]').forEach(el => {
+        el.innerText = lang === 'zh' ? el.getAttribute('data-zh') : el.getAttribute('data-en');
+      });
+    }
+  </script>
 </body>
 </html>
