Update About Us section and styling

--- a/index.html
+++ b/index.html
@@ -86,10 +86,16 @@
 
   <section id="about">
     <h2 data-en="About Us" data-zh="关于我们">About Us</h2>
-    <p data-en="OMMACHEM is a professional supplier of comprehensive textile auxiliaries..."
-       data-zh="OMMACHEM 是一家专业的纺织助剂供应商，提供从前处理、染色、皂洗到后整理的一站式解决方案。">
-      OMMACHEM is a professional supplier of comprehensive textile auxiliaries...
+    <p 
+       data-en="OMMACHEM is a comprehensive supplier of textile auxiliaries, providing a full range of solutions from pre-treatment, dyeing bath, cleaning, soaping, stripping, color fixing to finishing agents. Our products are developed with a strong commitment to eco-friendliness, energy efficiency, and sustainability."
+       data-zh="OMMACHEM 是一家全面的纺织助剂供应商，产品涵盖前处理、染浴助剂、清洗、皂洗、剥色、固色到整理等各个环节。我们致力于绿色环保、节能高效的产品开发。">
+       OMMACHEM is a comprehensive supplier of textile auxiliaries, providing a full range of solutions from pre-treatment, dyeing bath, cleaning, soaping, stripping, color fixing to finishing agents. Our products are developed with a strong commitment to eco-friendliness, energy efficiency, and sustainability.
     </p>
+    <p 
+       data-en="We are dedicated to helping our clients solve problems in every stage of textile processing. With professional technical support and reliable product quality, OMMACHEM delivers tailored solutions to meet the evolving needs of global textile manufacturers." 
+       data-zh="我们以专业的技术支持和稳定的产品质量，为客户在纺织加工的每个阶段提供解决方案，帮助客户应对挑战，实现可持续发展。">
+       We are dedicated to helping our clients solve problems in every stage of textile processing. With professional technical support and reliable product quality, OMMACHEM delivers tailored solutions to meet the evolving needs of global textile manufacturers.
+   </p>
   </section>
 
   <section id="products">
